--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,4 +2,7 @@ deploy.ant.properties.file=/home/adsi2/.netbeans/8.1/tomcat80.properties
 j2ee.server.domain=/home/adsi2/.netbeans/8.1/apache-tomcat-8.0.27.0_base
 j2ee.server.home=/usr/local/apache-tomcat-8.0.27
 j2ee.server.instance=tomcat80:home=/usr/local/apache-tomcat-8.0.27:base=apache-tomcat-8.0.27.0_base
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=/home/adsi2/.netbeans/8.1/build.properties
