--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
-deploy.ant.properties.file=/home/adsi2/.netbeans/8.1/tomcat80.properties
-j2ee.server.domain=/home/adsi2/.netbeans/8.1/apache-tomcat-8.0.27.0_base
+deploy.ant.properties.file=/root/.netbeans/8.2/tomcat80.properties
+j2ee.server.domain=/root/.netbeans/8.2/apache-tomcat-8.0.27.0_base
 j2ee.server.home=/usr/local/apache-tomcat-8.0.27
 j2ee.server.instance=tomcat80:home=/usr/local/apache-tomcat-8.0.27:base=apache-tomcat-8.0.27.0_base
-user.properties.file=/home/adsi2/.netbeans/8.1/build.properties
+user.properties.file=/root/.netbeans/8.2/build.properties
